--- a/index.html
+++ b/index.html
@@ -3,14 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./styles.css" />
 
     <title>Frontend Mentor | Recipe page</title>
 
@@ -27,8 +37,8 @@
   </head>
   <body>
     <main>
+      <img src="./assets/images/image-omelette.jpeg" alt="recipe img" />
       <section>
-        <img src="./assets/images/image-omelette.jpeg" alt="recipe img" />
         <h1 class="recipe-title">Simple Omelette Recipe</h1>
 
         <p>
@@ -40,9 +50,9 @@
         <div class="prep-container">
           <h3 class="prep-title">Preparation time</h3>
           <ul>
-            <li>Total: Approximately 10 minutes</li>
-            <li>Preparation: 5 minutes</li>
-            <li>Cooking: 5 minutes</li>
+            <li><span>Total</span>: Approximately 10 minutes</li>
+            <li><span>Preparation</span>: 5 minutes</li>
+            <li><span>Cooking</span>: 5 minutes</li>
           </ul>
         </div>
       </section>
@@ -66,29 +76,37 @@
 
         <ol>
           <li>
-            Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
-            pepper until they are well mixed. You can add a tablespoon of water
-            or milk for a fluffier texture.
+            <span>Beat the eggs</span>
+            : In a bowl, beat the eggs with a pinch of salt and pepper until
+            they are well mixed. You can add a tablespoon of water or milk for a
+            fluffier texture.
           </li>
           <li>
-            Heat the pan: Place a non-stick frying pan over medium heat and add
-            butter or oil.
+            <span>Heat the pan</span>
+            : Place a non-stick frying pan over medium heat and add butter or
+            oil.
           </li>
           <li>
-            Cook the omelette: Once the butter is melted and bubbling, pour in
-            the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+            <span>Cook the omelette</span>
+            : Once the butter is melted and bubbling, pour in the eggs. Tilt the
+            pan to ensure the eggs evenly coat the surface.
           </li>
           <li>
-            Add fillings (optional): When the eggs begin to set at the edges but
-            are still slightly runny in the middle, sprinkle your chosen
-            fillings over one half of the omelette.
+            <span>Add fillings (optional)</span>
+            : When the eggs begin to set at the edges but are still slightly
+            runny in the middle, sprinkle your chosen fillings over one half of
+            the omelette.
           </li>
           <li>
-            Fold and serve: As the omelette continues to cook, carefully lift
-            one edge and fold it over the fillings. Let it cook for another
-            minute, then slide it onto a plate.
+            <span>Fold and serve</span>
+            : As the omelette continues to cook, carefully lift one edge and
+            fold it over the fillings. Let it cook for another minute, then
+            slide it onto a plate.
           </li>
-          <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+          <li>
+            <span>Enjoy</span>
+            : Serve hot, with additional salt and pepper if needed.
+          </li>
         </ol>
       </section>
 
