--- a/index.html
+++ b/index.html
@@ -76,61 +76,62 @@
 
         <ol>
           <li>
-            <span>Beat the eggs</span>
-            : In a bowl, beat the eggs with a pinch of salt and pepper until
-            they are well mixed. You can add a tablespoon of water or milk for a
-            fluffier texture.
+            <span>Beat the eggs</span>: In a bowl, beat the eggs with a pinch of
+            salt and pepper until they are well mixed. You can add a tablespoon
+            of water or milk for a fluffier texture.
           </li>
           <li>
-            <span>Heat the pan</span>
-            : Place a non-stick frying pan over medium heat and add butter or
-            oil.
+            <span>Heat the pan</span>: Place a non-stick frying pan over medium
+            heat and add butter or oil.
           </li>
           <li>
-            <span>Cook the omelette</span>
-            : Once the butter is melted and bubbling, pour in the eggs. Tilt the
-            pan to ensure the eggs evenly coat the surface.
+            <span>Cook the omelette</span>: Once the butter is melted and
+            bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
+            coat the surface.
           </li>
           <li>
-            <span>Add fillings (optional)</span>
-            : When the eggs begin to set at the edges but are still slightly
-            runny in the middle, sprinkle your chosen fillings over one half of
-            the omelette.
+            <span>Add fillings (optional)</span>: When the eggs begin to set at
+            the edges but are still slightly runny in the middle, sprinkle your
+            chosen fillings over one half of the omelette.
           </li>
           <li>
-            <span>Fold and serve</span>
-            : As the omelette continues to cook, carefully lift one edge and
-            fold it over the fillings. Let it cook for another minute, then
-            slide it onto a plate.
+            <span>Fold and serve</span>: As the omelette continues to cook,
+            carefully lift one edge and fold it over the fillings. Let it cook
+            for another minute, then slide it onto a plate.
           </li>
           <li>
-            <span>Enjoy</span>
-            : Serve hot, with additional salt and pepper if needed.
+            <span>Enjoy</span>: Serve hot, with additional salt and pepper if
+            needed.
           </li>
         </ol>
       </section>
 
       <section>
-        <section class="section-title">Nutrition</section>
+        <h2 class="section-title">Nutrition</h2>
 
         <p>
           The table below shows nutritional values per serving without the
           additional fillings.
         </p>
 
-        <!-- Put this into a table -->
-
-        <!-- Calories
-    277kcal
-
-    Carbs
-    0g
-
-    Protein
-    20g
-
-    Fat
-    22g -->
+        <table>
+          <tr>
+            <td>Calories</td>
+            <td>277kcal</td>
+          </tr>
+          <tr>
+            <td>Carbs</td>
+            <td>0g</td>
+          </tr>
+          <tr>
+            <td>Protein</td>
+            <td>20g</td>
+          </tr>
+          <tr>
+            <td>Fat</td>
+            <td>22g</td>
+          </tr>
+        </table>
       </section>
 
       <div class="attribution">
